objects/ssot__FulfillmentOrder__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Account</masterLabel>
            <refAttrDeveloperName>AccountId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillToContactId__c</fullName>
        <label>Bill To Contact</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Bill To Contact</masterLabel>
            <refAttrDeveloperName>BillToContactId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointAddressId__c</fullName>
        <label>Fulfilled To Contact Point Address</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Fulfilled To Contact Point Address</masterLabel>
            <refAttrDeveloperName>ContactPointAddressId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Currency Code</masterLabel>
            <refAttrDeveloperName>CurrencyCode</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source</masterLabel>
            <refAttrDeveloperName>DataSourceId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source Object</masterLabel>
            <refAttrDeveloperName>DataSourceObjectId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FufilledToCountryCode__c</fullName>
        <label>Fufilled To Country Code</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Fufilled To Country Code</masterLabel>
            <refAttrDeveloperName>FufilledToCountryCode</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FufilledToGeocodeAccCode__c</fullName>
        <label>Fufilled To Geocode Accuracy Code</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Fufilled To Geocode Accuracy Code</masterLabel>
            <refAttrDeveloperName>FufilledToGeocodeAccCode</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FufilledToLatitudeCode__c</fullName>
        <label>Fufilled To Latitude Code</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Fufilled To Latitude Code</masterLabel>
            <refAttrDeveloperName>FufilledToLatitudeCode</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FufilledToLongitudeCode__c</fullName>
        <label>Fufilled To Longitude Code</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Fufilled To Longitude Code</masterLabel>
            <refAttrDeveloperName>FufilledToLongitudeCode</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FulfilledToEmailAddressId__c</fullName>
        <label>Fulfilled To Email Address</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Fulfilled To Email Address</masterLabel>
            <refAttrDeveloperName>FulfilledToEmailAddressId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfilledToNm__c</fullName>
        <label>Fulfilled To Name</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Fulfilled To Name</masterLabel>
            <refAttrDeveloperName>FulfilledToNm</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfilledToPhoneId__c</fullName>
        <label>Fulfilled To Phone</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Fulfilled To Phone</masterLabel>
            <refAttrDeveloperName>FulfilledToPhoneId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfilledToText__c</fullName>
        <label>Fulfilled To</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Fulfilled To</masterLabel>
            <refAttrDeveloperName>FulfilledToText</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentOrderNumber__c</fullName>
        <label>Number</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Number</masterLabel>
            <refAttrDeveloperName>FulfillmentOrderNumber</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentStatusCategory__c</fullName>
        <label>Fulfillment Status Category</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Fulfillment Status Category</masterLabel>
            <refAttrDeveloperName>FulfillmentStatusCategory</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentStatus__c</fullName>
        <label>Fulfillment Order Status</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Fulfillment Order Status</masterLabel>
            <refAttrDeveloperName>FulfillmentStatus</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentTypeCategory__c</fullName>
        <label>Fulfillment Type Category</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Fulfillment Type Category</masterLabel>
            <refAttrDeveloperName>FulfillmentTypeCategory</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentType__c</fullName>
        <label>Fulfillment Type</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Fulfillment Type</masterLabel>
            <refAttrDeveloperName>FulfillmentType</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GrandTotalAmount__c</fullName>
        <label>Grand Total Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Grand Total Amount</masterLabel>
            <refAttrDeveloperName>GrandTotalAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Fulfillment Order Id</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Fulfillment Order Id</masterLabel>
            <primaryIndexOrder>1</primaryIndexOrder>
            <refAttrDeveloperName>Id</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Internal Organization</masterLabel>
            <refAttrDeveloperName>InternalOrganizationId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsReship__c</fullName>
        <label>is Reship</label>
        <length>6</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>is Reship</masterLabel>
            <refAttrDeveloperName>IsReship</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Name</masterLabel>
            <refAttrDeveloperName>Name</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OrderDeliveryMethod__c</fullName>
        <label>Order Delivery Method</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Order Delivery Method</masterLabel>
            <refAttrDeveloperName>OrderDeliveryMethod</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReturnAddressId__c</fullName>
        <label>Return Address</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Return Address</masterLabel>
            <refAttrDeveloperName>ReturnAddressId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderDeliveryGroupId__c</fullName>
        <label>Sales Order Delivery Group</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Sales Order Delivery Group</masterLabel>
            <refAttrDeveloperName>SalesOrderDeliveryGroupId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderId__c</fullName>
        <label>Sales Order</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Sales Order</masterLabel>
            <refAttrDeveloperName>SalesOrderId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxPolicy__c</fullName>
        <label>Tax Policy</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Tax Policy</masterLabel>
            <refAttrDeveloperName>TaxPolicy</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAdjustmentAmount__c</fullName>
        <label>Total Adjustment Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Adjustment Amount</masterLabel>
            <refAttrDeveloperName>TotalAdjustmentAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAdjustmentTaxAmount__c</fullName>
        <label>Total Adjustment Tax Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Adjustment Tax Amount</masterLabel>
            <refAttrDeveloperName>TotalAdjustmentTaxAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAdjustmentWithTaxAmount__c</fullName>
        <label>Total Adjustment With Tax Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Adjustment With Tax Amount</masterLabel>
            <refAttrDeveloperName>TotalAdjustmentWithTaxAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAmount__c</fullName>
        <label>Total Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Amount</masterLabel>
            <refAttrDeveloperName>TotalAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveryAdjAmount__c</fullName>
        <label>Total Delivery Adjustment Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Delivery Adjustment Amount</masterLabel>
            <refAttrDeveloperName>TotalDeliveryAdjAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveryAdjTaxAmount__c</fullName>
        <label>Total Delivery Adjustment Tax Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Delivery Adjustment Tax Amount</masterLabel>
            <refAttrDeveloperName>TotalDeliveryAdjTaxAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveryAdjstWithTaxAmount__c</fullName>
        <label>Total Delivery Adjst With Tax Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Delivery Adjst With Tax Amount</masterLabel>
            <refAttrDeveloperName>TotalDeliveryAdjstWithTaxAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveryAmount__c</fullName>
        <label>Total Delivery Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Delivery Amount</masterLabel>
            <refAttrDeveloperName>TotalDeliveryAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveryTaxAmount__c</fullName>
        <label>Total Delivery Tax Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Delivery Tax Amount</masterLabel>
            <refAttrDeveloperName>TotalDeliveryTaxAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveryWithTaxAmount__c</fullName>
        <label>Total Delivery With Tax Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Delivery With Tax Amount</masterLabel>
            <refAttrDeveloperName>TotalDeliveryWithTaxAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalItemCount__c</fullName>
        <label>Total Item Count</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Item Count</masterLabel>
            <refAttrDeveloperName>TotalItemCount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalOrderAdjTaxAmount__c</fullName>
        <label>Total Order Adjustment Tax Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Order Adjustment Tax Amount</masterLabel>
            <refAttrDeveloperName>TotalOrderAdjTaxAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductAmount__c</fullName>
        <label>Total Product Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Product Amount</masterLabel>
            <refAttrDeveloperName>TotalProductAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductTaxAmount__c</fullName>
        <label>Total Product Tax Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Product Tax Amount</masterLabel>
            <refAttrDeveloperName>TotalProductTaxAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductWithTaxAmount__c</fullName>
        <label>Total Product With Tax Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Product With Tax Amount</masterLabel>
            <refAttrDeveloperName>TotalProductWithTaxAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalTaxAmount__c</fullName>
        <label>Total Tax Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Tax Amount</masterLabel>
            <refAttrDeveloperName>TotalTaxAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__isSuspended__c</fullName>
        <label>is Suspended</label>
        <length>6</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>is Suspended</masterLabel>
            <refAttrDeveloperName>isSuspended</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761213650_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentOrder_FulfilledToPhoneId__rel</label>
        <referenceTo>ssot__ContactPointPhone__dlm</referenceTo>
        <relationshipLabel>FulfillmentOrder_FulfilledToPhoneId__rel</relationshipLabel>
        <relationshipName>rel_1697761213650_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761213735_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentOrder_ContactPointAddress_rel</label>
        <referenceTo>ssot__ContactPointAddress__dlm</referenceTo>
        <relationshipLabel>FulfillmentOrder_ContactPointAddress_rel</relationshipLabel>
        <relationshipName>rel_1697761213735_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761213875_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FulfillmentOrder_AccountId_map_Accou_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>FulfillmentOrder_AccountId_map_Accou_rel</relationshipLabel>
        <relationshipName>rel_1697761213875_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <masterLabel>Fulfillment Order</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Fulfillment Order</referenceEntityGroup>
        <referenceEntityName>FulfillmentOrder</referenceEntityName>
        <referenceEntitySubjectArea>Fulfillment Order</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>